kubernetes/odoo-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: odoo-postgres
  labels:
    app: odoo
spec:
  ports:
    - port: 5432
  selector:
    app: odoo
    tier: postgres
  clusterIP: None
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: odoo-postgres
  labels:
    app: odoo
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: odoo
        tier: postgres
    spec:
      containers:
      - image: postgres:10
        name: postgres
        ports:
        - containerPort: 5432
          name: postgres
        volumeMounts:
        - name: odoo-postgres-persistent-storage
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: odoo-postgres-persistent-storage
        persistentVolumeClaim:
          claimName: odoo-postgres-pv-claim
