kubernetes/odoo-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: odoo
  labels:
    app: odoo
spec:
  ports:
  - port: 8069
  selector:
    app: odoo
    tier: frontend
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: odoo
  labels:
    app: odoo
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: odoo
        tier: frontend
    spec:
      containers:
      - image: odoo:11
        name: odoo
        ports:
        - containerPort: 8069
          name: odoo
