kubernetes/com-stouffcapital-odoo-ing-ssl.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-odoo
  annotations:
    kubernetes.io/tls-acme: "true" # enable certificates
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - crm.stouffcapital.com
    secretName: crm-stouffcapital-service-tls
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: crm.stouffcapital.com
    http:
      paths:
      - path: /
        backend:
          serviceName: odoo
          servicePort: 8069
